start/py-console.txt
~/ $ python
Python 3.7.6 (default, Jan 30 2020, 02:24:44)
[GCC 7.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> this
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'this' is not defined
>>> import this
The Zen of Python, by Tim Peters

Beautiful is better than ugly.
Explicit is better than implicit.
Simple is better than complex.
Complex is better than complicated.
Flat is better than nested.
Sparse is better than dense.
Readability counts.
Special cases aren't special enough to break the rules.
Although practicality beats purity.
Errors should never pass silently.
Unless explicitly silenced.
In the face of ambiguity, refuse the temptation to guess.
There should be one-- and preferably only one --obvious way to do it.
Although that way may not be obvious at first unless you're Dutch.
Now is better than never.
Although never is often better than *right* now.
If the implementation is hard to explain, it's a bad idea.
If the implementation is easy to explain, it may be a good idea.
Namespaces are one honking great idea -- let's do more of those!
>>> 2+3
5
>>> 4*5
20
>>> x=5
>>> x**2-2*x+1
16
>>> y = z*2-x**2+20
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'z' is not defined
>>> z = 2
>>> y = z*2-x**2+20
>>> y =
  File "<stdin>", line 1
    y =
      ^
SyntaxError: invalid syntax
>>> y+0
-1
>>> y
-1
>>> x
5
>>> "Halo"
'Halo'
>>> a = "Halo"
>>> a
'Halo'
>>> a * 3
'HaloHaloHalo'
>>> a + ' Mike'
'Halo Mike'
>>> b = "this is my first time at lesson one"
>>> b.upper()
'THIS IS MY FIRST TIME AT LESSON ONE'
>>> b
'this is my first time at lesson one'
>>> c = b.upper()
>>> c
'THIS IS MY FIRST TIME AT LESSON ONE'
>>> c.lower()
'this is my first time at lesson one'
>>> "yes" == "YES"
False
>>> len(b)
35
>>> list = b.split()
>>> list
['this', 'is', 'my', 'first', 'time', 'at', 'lesson', 'one']
>>> len(list)
8
>>> numbers = [1,4,6,3,6]
>>> numbers
[1, 4, 6, 3, 6]
>>> len(numbers)
5
>>> n = numbers.sort()
>>> n
>>> numbers.sort()
>>> numbers
[1, 3, 4, 6, 6]
>>> numbers.reverse()
>>> numbers
[6, 6, 4, 3, 1]
>>> numbers.append(10)
>>> numbers
[6, 6, 4, 3, 1, 10]
>>> numbers[4]
1
>>> numbers2]
  File "<stdin>", line 1
    numbers2]
            ^
SyntaxError: invalid syntax
>>> numbers[2]
4
>>> numbers[1] = 8
>>> numbers
[6, 8, 4, 3, 1, 10]
>>> numbers[6] = 11
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list assignment index out of range
>>> numbers.pop(2)
4
>>> numbers
[6, 8, 3, 1, 10]
>>> if x > 3:
... print(x+5)
  File "<stdin>", line 2
    print(x+5)
        ^
IndentationError: expected an indented block
>>> if x > 3:
...     print(x+5)
... else:
...     print(x)
...
10
>>> def hi():
...     name = input('Enter your name: ')
...     print('Hello, ' + name)
...
>>> hi()
Enter your name: Mike
Hello, Mike
>>> for word in list:
...     print(word*3)
...
thisthisthis
isisis
mymymy
firstfirstfirst
timetimetime
atatat
lessonlessonlesson
oneoneone